Fri Jan 28 21:07:07 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/CORBANAME_Parser.cpp:

	  Include "ace/SString.h" since to pull in complete ACE string
	  class declarations.  Necessitated by include directive
	  reductions in ACE.

	* tao/ORB_Core.cpp:

	  Include "ace/Reactor.h" to pull in complete ACE_Reactor class
	  declaration.  Necessitated by include directive reductions in
	  ACE.

	* tao/default_resource.h:

	  Forward declare ACE_Reactor_Impl class.  Necessitated by include
	  directive reductions in ACE.

Fri Jan 28 13:32:47 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* tests/OctetSeq/client.cpp:
	* tests/OctetSeq/test_i.cpp:

	  Removed reinterpret_cast<const char*> for ACE_crc32's buffer
	  parameter, as it was changed to take a const void* some time
	  back.

Fri Jan 28 07:53:34 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/FT_ReplicationManager/FT_ReplicationManagerFaultAnalyzer.cpp:
	* orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
	* orbsvcs/Fault_Detector/Fault_Detector_i.cpp:
	* orbsvcs/LoadBalancer/LoadManager.cpp:
	* orbsvcs/LoadBalancer/LoadMonitor.cpp:
	* orbsvcs/Naming_Service/NT_Naming_Service.cpp:
	* orbsvcs/Notify_Service/NT_Notify_Service.cpp:
	* orbsvcs/PSS/PSDL_Datastore.cpp:
	* orbsvcs/PSS/PSDL_OctetSeq.cpp:
	* orbsvcs/examples/LoadBalancing/server.cpp:
	* orbsvcs/examples/ORT/Object_Factory_i.cpp:
	* orbsvcs/orbsvcs/IOR_Multicast.cpp:
	* orbsvcs/orbsvcs/Scheduler_Factory.cpp:
	* orbsvcs/orbsvcs/Time_Utilities.i:
	* orbsvcs/orbsvcs/AV/Endpoint_Strategy.cpp:
	* orbsvcs/orbsvcs/AV/RTCP.cpp:
	* orbsvcs/orbsvcs/AV/sfp.cpp:
	* orbsvcs/orbsvcs/CosEvent/CEC_TypedEventChannel.cpp:
	* orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.cpp:
	* orbsvcs/orbsvcs/Event/EC_Conjunction_Filter.cpp:
	* orbsvcs/orbsvcs/Event/EC_Kokyu_Filter_Builder.cpp:
	* orbsvcs/orbsvcs/Event/EC_ObserverStrategy.cpp:
	* orbsvcs/orbsvcs/Event/EC_Sched_Filter_Builder.cpp:
	* orbsvcs/orbsvcs/Event/EC_Timeout_Generator.cpp: