@@ -53,6 +53,9 @@
 #include "orbsvcs/AV/AV_export.h"
 #include "orbsvcs/AV/Protocol_Factory.h"
 
+#include "ace/Service_Config.h"
+
+
 #define RTP_PT_BVC              22      /* Berkeley video codec */
 
 /* RTP standard content encodings for video */
